# affiliator

./: LICENSE.md  README.md  affiliator.py  setup.cfg
affiliator/: __main__.py
rsrc/: test.ods
