[metadata]
name = affiliator
version = attr: affiliator.version.__version__
author = xaratustrah
url = https://github.com/xaratustrah/affiliator
description = Convert a spread sheet file containing Author-Affiliations to LaTeX header for use with package authblk
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Science
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    affiliator = affiliator.__main__:main
